Kubernetes/mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  serviceName: mysql
  replicas: 3
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - name: mysql
          containerPort: 3306
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
          subPath: mysql
        - name: conf
          mountPath: /etc/mysql/conf.d
        - name: secretvolume
          readOnly: true
          mountPath: "/etc/secret-volume"
        resources:
          requests:
            cpu: 250m
            memory: 512M
        livenessProbe:
          exec:
            command: ["mysqladmin", "ping"]
            #command: ["/bin/sh","/etc/secret-volume/mysqlPing.sh"]
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          exec:
            # Check we can execute queries over TCP (skip-networking is off).
            #command: ["mysql", "-uroot","--defaults-extra-file", "/etc/secret-volume/mysqlConfigFile", "--protocol", "tcp", "-h", "127.0.0.1", "-e", "SELECT 1"]
            command: ["/bin/sh","/etc/secret-volume/mysqlReadinessFile.sh"]
          initialDelaySeconds: 15
          periodSeconds: 2
          timeoutSeconds: 1
      - name: xtrabackup
        image: gcr.io/google-samples/xtrabackup:1.0
        ports:
        - name: xtrabackup
          containerPort: 3307
        command:
        - bash
        - "-c"
        - |
          [...]
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
          subPath: mysql
        - name: conf
          mountPath: /etc/mysql/conf.d
        - name: secretvolume
          readOnly: true
          mountPath: "/etc/secret-volume"
        - name: config-map
          mountPath: /mnt/config-map
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
      volumes:
      - name: conf
        emptyDir: {}
      - name: config-map
        configMap:
          name: mysql
      - name: secretvolume
        secret:
          secretName: mysecret
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      #storageClassName: fast
      accessModes: 
        - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
