Kubernetes/webapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  selector:
    app: webapp
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    #nodePort: 30000
  #type: NodePort #LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: sbraer/mysqlwebapp:v1
        imagePullPolicy: IfNotPresent #Always
        volumeMounts:
        - name: secretvolume
          readOnly: true
          mountPath: "/etc/secret-volume"
      volumes:
      - name: conf
        emptyDir: {}
      - name: config-map
        configMap:
          name: mysql
      - name: secretvolume
        secret:
          secretName: mysecret
